# CSG_example

./: .gitignore  .gitmodules  CMakeLists.txt  MeshVoxel.cpp  MeshVoxel.h  MeshVoxelARAP.cpp  MeshVoxelARAP.h  MeshVoxelARAP_Solver.h  MeshVoxelARAP_dlibSolver.h  MeshVoxelOpt.cpp  MeshVoxelOpt.h  SurfaceEvo.cpp  SurfaceEvo.h  SurfaceSlice.cpp  SurfaceSlice.h  buddaHead2.obj.puz  main.cpp  pumpkin.puz  squirrel.puz  table.txt  test.cpp
Bunny_12x12x9_K12_Strict_1_T0.02/: Bunny_12x12x9_K12_Strict_1.puz  animation.motion.txt  refineAllObj.ms
Pumpkin_22_12_21/: Pumpkin.puz
Result/: cow2.puz  mushroom.puz  pumpkin.puz  table.puz  teddy.puz  vase1.puz
Result/angry_bird/: angry_bird_1.puz  angry_bird_2.puz
Result/angry_bird/angry_bird/: angry_bird.puz
Squirrel_22_12_21/: Squirrel.puz
Teddy_22_12_21/: Teddy.puz
cmake/: FindKnitro.cmake  FindMOSET.cmake
data/: Bunny_12x12x9.mlp  Bunny_12x12x9_voxel.txt  Sphere_Voxel.txt  plane_dense.ply
data/Model/Organic/: Dragonite.obj.mtl  Duck_voxel.txt
